--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -74,7 +74,7 @@
             <p class="home__text-info">
               Situated on the far end of the headland in Sveio, a 30-minute drive from Haugesund, where the endless sky meets the majestic sea, you can find the Ryvarden lighthouse. It was from this site Floke Vilgerdsson, or Ravnafloke, in the year 868 sailed out as the first man to settle on an unnamed island which he named Iceland. More than a thousand years later, the five cabins, “Flokene”, stand ready in the sea gap in Sveio.
             </p>
-            <a href="#" class="anim-btn">
+            <a href="https://www.archdaily.com/951794/flokehyttene-cabins-holon-arkitektur" class="anim-btn" target='_blank'>
               Learn More
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -95,7 +95,7 @@
             <p class="home__text-info">
               Situated in a valley at the mouth of the river Vefsn, the town of Mosjøen provides an ice free and safe harbour close to Lofoten. Today the town is dominated by residential areas of detached houses in a strict grid plan. The Bay Window house has four apartments designed for people who want to replace their single-family house with an apartment in favour of a simpler life. It has therefore been an ambition to create a project with apartments that have many of the qualities found in a single-family house.
             </p>
-            <a href="#" class="anim-btn">
+            <a href="https://www.archdaily.com/953630/bay-window-house-atelier-oslo" class="anim-btn" target='_blank'>
               Learn More
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -116,7 +116,7 @@
             <p class="home__text-info">
               This house was built on a steep and small site. The slender building also provides a wide variety of rooms such that a family of five can spread out when needed. In the uninsulated ground level area, there is parking and entrance as well as equipment storage and technical rooms. To make this area a pleasant space, outdoors but sheltered from the weather, daylight is let in via gaps along the building's west- and east facades. In the innermost part of the ground floor space opens up to a five-meter high utility room for trampoline and ball games.
             </p>
-            <a href="#" class="anim-btn">
+            <a href="https://www.archdaily.com/955358/zieglers-nest-rever-and-drage-architects?ad_source=search&ad_medium=search_result_all" class="anim-btn" target='_blank'>
               Learn More
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -430,6 +430,28 @@
       </div>
       <p class="footer__copyright">@ Copyright</p>
     </footer>
+    <div class="contacts-modal">
+      <div class="contacts-modal__close">
+        <div class="contacts-modal__close-line"></div>
+        <div class="contacts-modal__close-line"></div>
+      </div>
+      <p class="contacts-modal__title">
+        Contact Us <span class="yellow-color">.</span>
+      </p>
+      <form action="#" class="contacts-modal__form">
+        <p class="contacts-modal__name">Name</p>
+        <input type="text" class="contacts-modal__input" required>
+        <p class="contacts-modal__name">Email</p>
+        <input type="text" class="contacts-modal__input" required>
+        <p class="contacts-modal__name">Message</p>
+        <textarea type="text" class="contacts-modal__textarea"></textarea>
+        <button class="contacts-modal__btn">Send</button>
+      </form>
+    </div>
+    <div class="real-estate__video-wrapper"> 
+      <iframe class="real-estate__video" src="https://www.youtube.com/embed/xcSVUrvG8WM" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="hide-bg"></div>
   </div>
   <script src="js/script.js"></script>
 </body>
