--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
             <p class="home__text-info">
               Расположенный на дальнем конце мыса в Свейо, в 30 минутах езды от Хаугесунда, где бескрайнее небо встречается с величественным морем, вы можете найти маяк Риварден. Именно с этого места Флоке Вильгердссон, или Равнафлок, в 868 году отплыл первым человеком, поселившимся на безымянном острове, который он назвал Исландией. Более тысячи лет спустя пять кают «Флокене» стоят наготове в морском ущелье Свейо.
             </p>
-            <a href="#" class="anim-btn">
+            <a href="https://www.archdaily.com/951794/flokehyttene-cabins-holon-arkitektur" class="anim-btn" target='_blank'>
               Узнать больше
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -95,7 +95,7 @@
             <p class="home__text-info">
               Город Мушёэн расположен в долине в устье реки Вефсн, недалеко от Лофотенских островов и представляет собой незамерзающую и безопасную гавань. Сегодня в городе преобладают жилые кварталы отдельно стоящих домов, построенных по строгой сетке. В доме «Эркер» четыре квартиры, предназначенные для людей, которые хотят заменить свой частный дом квартирой в пользу более простой жизни. Поэтому мы стремились создать проект с квартирами, которые обладают многими качествами, присущими односемейному дому.
             </p>
-            <a href="#" class="anim-btn">
+            <a href="https://www.archdaily.com/953630/bay-window-house-atelier-oslo" class="anim-btn" target='_blank'>
               Узнать больше
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -116,7 +116,7 @@
             <p class="home__text-info">
               Этот дом был построен на небольшом крутом участке. В тонком здании также есть множество комнат, так что при необходимости семья из пяти человек может разместиться. На неизолированной территории первого этажа находится парковка и подъезд, а также складские помещения и технические помещения. Чтобы сделать это место приятным на открытом воздухе, но защищенным от непогоды, дневной свет проникает через щели вдоль западного и восточного фасадов здания. Во внутренней части первого этажа открывается пятиметровое подсобное помещение для игр на батуте и с мячом.
             </p>
-            <a href="#" class="anim-btn">
+            <a href="https://www.archdaily.com/955358/zieglers-nest-rever-and-drage-architects?ad_source=search&ad_medium=search_result_all" class="anim-btn" target='_blank'>
               Узнать больше
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -433,6 +433,28 @@
       </div>
       <p class="footer__copyright">@ Copyright</p>
     </footer>
+    <div class="real-estate__video-wrapper"> 
+      <iframe class="real-estate__video" src="https://www.youtube.com/embed/xcSVUrvG8WM" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="contacts-modal">
+      <div class="contacts-modal__close">
+        <div class="contacts-modal__close-line"></div>
+        <div class="contacts-modal__close-line"></div>
+      </div>
+      <p class="contacts-modal__title">
+        Связаться с нами <span class="yellow-color">.</span>
+      </p>
+      <form action="#" class="contacts-modal__form">
+        <p class="contacts-modal__name">Имя</p>
+        <input type="text" class="contacts-modal__input" required>
+        <p class="contacts-modal__name">Email</p>
+        <input type="text" class="contacts-modal__input" required>
+        <p class="contacts-modal__name">Сообщение</p>
+        <textarea type="text" class="contacts-modal__textarea"></textarea>
+        <button class="contacts-modal__btn">Отправить</button>
+      </form>
+    </div>
+    <div class="hide-bg"></div>
   </div>
   <script src="js/script.js"></script>
 </body>
