--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,12 @@
             <a href="#" class="header__anchor-link">Детали</a>
             <a href="#" class="header__anchor-link">Контакты</a>
           </nav>
-          <a href="index-eng.html" class="header__lang rus-lang">Язык (RU)</a>
+          <a href="index-eng.html" class="header__lang">Язык (RU)</a>
+          <div class="header__hamburger">
+            <div class="header__hamburger-line"></div>
+            <div class="header__hamburger-line"></div>
+            <div class="header__hamburger-line"></div>
+          </div>
         </header>
         <div class="header__links">
           <a href="mailto:findeo@gmail.com" class="header__links-email">findeo@gmail.com</a>
@@ -356,7 +361,10 @@
       <div class="footer__subscr">
         <div class="footer__subscr-text">
           <p class="footer__subscr-uppertitle">Подписка на новости</p>
-          <h3 class="footer__subscr-title">Не нашли город, который искали? Предложите его нам!</h3>
+          <h3 class="footer__subscr-title">
+            Не нашли город, который искали?
+            <br>  
+            Предложите его нам!</h3>
         </div>
         <form action="#" class="footer__subscr-form">
           <input type="text" class="footer__subscr-input" placeholder="Введите Ваш Email-адрес" required>
