--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
             <a href="#" class="header__anchor-link">Как это работает</a>
             <a href="#" class="header__anchor-link">Детали</a>
             <a href="#" class="header__anchor-link">Контакты</a>
+            <div class="header__close-menu">
+              <div class="header__close-menu-line"></div>
+              <div class="header__close-menu-line"></div>
+            </div>
           </nav>
           <a href="index-eng.html" class="header__lang">Язык (RU)</a>
           <div class="header__hamburger">
