--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -27,8 +27,17 @@
             <a href="#" class="header__anchor-link">How in works</a>
             <a href="#" class="header__anchor-link">Details</a>
             <a href="#" class="header__anchor-link">Contacts</a>
+            <div class="header__close-menu">
+              <div class="header__close-menu-line"></div>
+              <div class="header__close-menu-line"></div>
+            </div>
           </nav>
           <a href="index.html" class="header__lang rus-lang">Language (EN)</a>
+          <div class="header__hamburger">
+            <div class="header__hamburger-line"></div>
+            <div class="header__hamburger-line"></div>
+            <div class="header__hamburger-line"></div>
+          </div>
         </header>
         <div class="header__links">
           <a href="mailto:findeo@gmail.com" class="header__links-email">findeo@gmail.com</a>
