--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Perfect Home</title>
 
+  <link rel="icon" href="img/house.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -446,7 +447,7 @@
       <p class="footer__copyright">@ Copyright</p>
     </footer>
     <div class="real-estate__video-wrapper"> 
-      <iframe class="real-estate__video" src="https://www.youtube.com/embed/xcSVUrvG8WM" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315"  class="real-estate__video" src="https://www.youtube.com/embed/xcSVUrvG8WM" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="contacts-modal">
       <div class="contacts-modal__close">
