--- a/src/index.html
+++ b/src/index.html
@@ -386,16 +386,16 @@
           <h3 class="footer__links-title">Меню</h3>
           <ul class="footer__links-nav">
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Главная</a>
+              <a href="index.html" class="footer__links-link">Главная</a>
             </li>
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Лучшие места</a>
+              <a href="https://www.archdaily.com/tag/top100/" class="footer__links-link" target="_blank">Лучшие места</a>
             </li>
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Направления</a>
+              <a href="https://www.archdaily.com/search/projects?ad_source=jv-header&ad_name=main-menu" class="footer__links-link" target="_blank">Направления</a>
             </li>
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Ресурсы</a>
+              <a href="https://www.archdaily.com/" class="footer__links-link" target="_blank">Ресурсы</a>
             </li>
           </ul>
         </nav>
@@ -412,7 +412,7 @@
               <a href="https://www.skype.com/" class="footer__links-link" target="_blank">Skype</a>
             </li>
             <li class="footer__links-name">
-              <a href="https://www.pinterest.ru/" class="footer__links-link" target="_blank">Printerest</a>
+              <a href="https://www.pinterest.ru/" class="footer__links-link" target="_blank">Pinterest</a>
             </li>
           </ul>
         </nav>
