--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -379,16 +379,16 @@
           <h3 class="footer__links-title">Menu</h3>
           <ul class="footer__links-nav">
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Main</a>
+              <a href="index-eng.html" class="footer__links-link">Main</a>
             </li>
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Best places</a>
+              <a href="https://www.archdaily.com/tag/top100/" class="footer__links-link" target="_blank">Best places</a>
             </li>
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Destinations</a>
+              <a href="https://www.archdaily.com/search/projects?ad_source=jv-header&ad_name=main-menu" class="footer__links-link" target="_blank">Destinations</a>
             </li>
             <li class="footer__links-name">
-              <a href="#" class="footer__links-link">Resources</a>
+              <a href="https://www.archdaily.com/" class="footer__links-link" target="_blank">Resources</a>
             </li>
           </ul>
         </nav>
@@ -405,7 +405,7 @@
               <a href="https://www.skype.com/" class="footer__links-link" target="_blank">Skype</a>
             </li>
             <li class="footer__links-name">
-              <a href="https://www.pinterest.ru/" class="footer__links-link" target="_blank">Printerest</a>
+              <a href="https://www.pinterest.ru/" class="footer__links-link" target="_blank">Pinterest</a>
             </li>
           </ul>
         </nav>
@@ -453,7 +453,7 @@
         <p class="contacts-modal__name">Email</p>
         <input type="text" class="contacts-modal__input" required>
         <p class="contacts-modal__name">Message</p>
-        <textarea type="text" class="contacts-modal__textarea"></textarea>
+        <textarea class="contacts-modal__textarea"></textarea>
         <button class="contacts-modal__btn">Send</button>
       </form>
     </div>
