--- a/src/index.html
+++ b/src/index.html
@@ -463,7 +463,7 @@
         <p class="contacts-modal__name">Email</p>
         <input type="text" class="contacts-modal__input" required>
         <p class="contacts-modal__name">Сообщение</p>
-        <textarea type="text" class="contacts-modal__textarea"></textarea>
+        <textarea class="contacts-modal__textarea"></textarea>
         <button class="contacts-modal__btn">Отправить</button>
       </form>
     </div>
